...
    <ToggleButton
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:id="@+id/toggleProfileStatus"/>

</RelativeLayout>
